--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Backend Dumbflix",
+  "description": "Backend DumbPlay",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Fadhil",
+  "author": "sgnd",
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
